# arxiv-tui

./: .gitignore  ARCHITECTURE.md  ARXIV_INTEGRATION_SUCCESS.md  Cargo.toml  FIX_DOCKER.md  GETTING_STARTED.md  HELIX_SETUP.md  QUICKSTART.md  README.md  README_SCRIPTS.md  START_DOCKER.md  STATUS.md  helix.toml  quick_test.sh  run_pipeline.sh  setup.sh
config/: default.toml
db/: queries.hx  schema.hx
examples/: arxiv_search.rs  check_helix.rs  helix_integration.rs  ingest_papers.rs  semantic_search.rs  test_xml.rs
helix/: queries.hx  schema.hx
models/: README.md
src/: app.rs  arxiv.rs  config.rs  db.rs  lib.rs  main.rs
src/arxiv/: client.rs  models.rs  parser.rs
src/core/: commands.rs  events.rs  mod.rs  state.rs
src/db/: client.rs  models.rs
src/embeddings/: generator.rs  models.rs
src/ui/: app.rs  mod.rs
src/ui/components/: mod.rs  paper_list.rs  search_bar.rs  status_bar.rs
src/ui/views/: browse.rs  detail.rs  library.rs  mod.rs  search.rs
src/utils/: cache.rs
tests/integration/: arxiv_test.rs
