[package]
name = "arxiv-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance TUI for searching and managing arXiv papers with semantic search"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# HelixDB client
helix-rs = "0.1.9"

# HTTP client for arXiv API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# XML parsing (arXiv Atom feeds)
quick-xml = { version = "0.36", features = ["serialize"] }

# Embedding generation
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = "0.20"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
